# macsad

./: .README.md.swp  .gitignore  .gitmodules  .travis.yml  Makefile  Makefile.am  NOTICE  README.md  README.txt  common.mk  configure.ac  cscope.out  dpdk_backend.mk  dpdk_config_set  example_odp1  examples.cfg  hw_independent.mk  mac.sh  macs_new.pcap  odp_backend.mk  otest.sh  run_juan.py  run_l3-full.sh  run_l3.sh  run_test.py  tags  test.sh  test_dpdk1.sh  test_dpdk2.sh  test_dpdk_l3-full.sh  test_dpdk_l3.sh  test_odp1.sh  test_pcap1.sh
doc/: css.gen  doc.html  doc.md  make_doc.sh
examples/: l2fwd.p4  table_config_pcap.cfg
examples/captures/: ipv4_cipso_option.pcap
examples/p4_14/: l2_l3.p4  l3_routing_nhg.p4
examples/p4_16/: l2_fwd_16.p4  l3_routing_test_16.p4
examples/p4_src/: l3_routing_test.p4  nat.p4  test_gyn.p4  vlan_simple.p4
old_mk/: Makefile  README.md  common.mk  hw_independent.mk  odp_backend.mk  test.sh
res/: perf_odps.data.old
scripts/: colorized-make.sh  dpdk_example_bridge.sh  dpdk_example_l2fwd.sh  dpdk_example_l3fwd.sh  guest_dpdk_off.sh  guest_preinstall_run_always.sh  guest_preinstall_run_once.sh  host_create_veth_interfaces.sh  huge_setup.sh  install.sh  install_pkgs.sh  set_opts_default.sh  set_opts_nohuge.sh  set_opts_nohuge_terse.sh  traces.c  veth_create.sh  veth_delete.sh  veth_disable_ipv6.sh
src/: compiler.py  createfuns.py  createunions.py  data_plane_analyser_utils.py  header_info.py  transform_hlir16.py  transpiler.py  utils.py
src/hardware_dep/: odp_p4.tar
src/hardware_dep/dpdk/: main.c  main_dpdk_main_loop.c
src/hardware_dep/dpdk/ctrl_plane/: Makefile  controller.c  controller.h  ctrl_plane_backend.c  ctrl_plane_backend.h  fifo.c  handlers.h  threadpool.c  threadpool.h
src/hardware_dep/dpdk/data_plane/: dpdk_lib.c  dpdk_primitives.c  dpdk_tables.c
src/hardware_dep/dpdk/includes/: aliases.h  dpdk_lib.h  dpdk_tables.h
src/hardware_dep/odp/: main.c  main_dpdk_main_loop_simulator.c  main_odp.c  main_odp_main_loop_simulator.c
src/hardware_dep/odp/ctrl_plane/: controller.c  ctrl_plane_backend.c  fifo.h  handlers.c  messages.c  odp_controller.c  sock_helpers.c
src/hardware_dep/odp/ctrl_plane/tests/: test_backend.c
src/hardware_dep/odp/data_plane/: odp_lib.c  odp_primitives.c  odp_tables.c
src/hardware_dep/odp/includes/: aliases.h  odp_lib.h  odp_primitives.h  odp_tables.h  odp_vss_extern.h
src/hardware_dep/pcap/ctrl_plane/: control_plane.c  control_plane_actions.c  control_plane_actions.h  control_plane_generate_digest.c
src/hardware_dep/pcap/data_plane/: constants.c  data_plane.c  mac_learning_example_main.c  table_utils.c  utils.c
src/hardware_dep/pcap/includes/: p4_hw_lib.h  p4_hw_tables.h  standard_metadata.h
src/hardware_dep/shared/ctrl_plane/: Makefile  controller.c  controller.h  ctrl_plane_backend.c  ctrl_plane_backend.h  dpdk_controller  dpdk_l3-full_controller.c  dpdk_l3_controller.c  fifo.c  fifo.h  handlers.c  handlers.h  mac_bng_controller_dl.c  mac_bng_controller_ul.c  mac_controller  mac_controller.c  mac_l2_l3_controller.c  mac_l3-full_controller  mac_l3_controller.c  mac_l3_controller_ipv6.c  mac_l3_nhg_controller.c  mac_nat_dw.c  mac_nat_up.c  maco_controller.c  messages.c  messages.h  nat_controller_up.c  sock_helpers.c  sock_helpers.h  threadpool.c  threadpool.h
src/hardware_dep/shared/ctrl_plane/tests/: test_backend.c  test_messages.c
src/hardware_dep/shared/data_plane/: ternary_naive.c  vector.c
src/hardware_dep/shared/includes/: backend.h  dataplane.h  ternary_naive.h  vector.h
src/hardware_dep/spider/: handle_packet.c
src/hardware_dep/spider/data_plane/: shared_primitives.c  spider_primitives.c  spider_tables.c
src/hardware_dep/spider/includes/: aliases.h  backend.h  dataplane.h  spider_tables.h  standard_metadata.h
src/hardware_indep/: __init__.py  actions.c.py  actions.c.sugared  actions.h.py  actions.h.sugared  controlplane.c.py  controlplane.c.sugared  data_plane_data.h.py  data_plane_data.h.sugared  dataplane.c.py  dataplane.c.sugared  generated_metadata.h.sugared  parser.c.py  parser.c.sugared  parser.h.py  parser.h.sugared  tables.c.py  tables.c.sugared
src/utils/: codegen.sugar.py  hlir.py  json2hlir.py  misc.py  p4ast.py
tests/dpdk_actions/: Makefile  actions.c  data_plane.c  data_plane_data.h  header_info.h  test.sh
tests/dpdk_actions+tables/: Makefile  action_info.h  ctrl_plane.c  data_plane.c  data_plane_data.h  header_info.h  parser.c  switch.c  table_info.h  test.sh
tests/dpdk_tables/: Makefile  data_plane_data.h  header_info.h  tables.c  test.sh
tools/: Makefile  ipsend.c  script.sh  sendRawIP.c
traces/: trace.txt  trace_3000.txt  trace_trL3_1000_random.txt  trace_trL3_100_random.txt  trace_trL3_ipv6_10_random.txt  trace_trL3_ipv6_5_random.txt  trace_trPR_10000_l2.txt  trace_trPR_1000_l2.txt  trace_trPR_1000_l3.txt  trace_trPR_100_l2.txt  trace_trPR_100_l3.txt  trace_trPR_100_random_nat_dw.txt  trace_trPR_100_random_nat_up.txt  trace_trPR_12_l2.txt  trace_trPR_12_l3.txt  trace_trPR_24_l2.txt  trace_trPR_36_l2.txt  trace_trPR_48_l2.txt  trace_trPR_gre_10000_random.txt  trace_trPR_gre_100_random.txt  trace_trPR_tcp_10000_random.txt  trace_trPR_tcp_100_random.txt
